--- a/StormSafe.API/Properties/launchSettings.json
+++ b/StormSafe.API/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "StormSafe.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
